Fixed contrast issues, shadows, and text

--- a/style/contactStyle.css
+++ b/style/contactStyle.css
@@ -17,7 +17,7 @@ body{
     width: 40%;
 }
 .backgroundheader2 {
-    background-color: rgb(134, 180, 248);
+    background-color: rgb(64, 138, 250);
     padding: 24px 0;
 
 }
@@ -42,8 +42,15 @@ fieldset{
     border: 5px solid black;
 }
 .text-color label{
-    color:rgb(28, 27, 27);
+    color:rgb(255, 255, 255);
     font-size: 1.3em;
+    text-shadow: 0 0 3px rgb(56, 56, 56);
+
+}
+.text-color h1{
+    color:rgb(255, 255, 255) !important;
+    text-shadow: 0 0 3px rgb(56, 56, 56);
+
 }
 .text-color input{
     padding: 7px 20px;
